test/files/parser/errors/curly-function-colon.otest
name = "Curly bracket after function argument colon"
line = 2
character = 14
error = 'Expected input value after ":", but received "{".'

---

sine(volume: {
